--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,6 @@
 click==6.6
 Flask==0.11
-Flask-PyMongo==0.4.1
-gunicorn==19.6.0
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-pymongo==3.3.0
-pytz==2016.6.1
-Werkzeug==0.11.10
-click==6.6
-Flask==0.11
+Flask-GoogleMaps==0.2.4
 Flask-PyMongo==0.4.1
 gunicorn==19.6.0
 itsdangerous==0.24
