--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 click==6.6
-Flask==0.11
+dominate==2.3.0
+Flask==0.11.1
 Flask-GoogleMaps==0.2.4
 Flask-Login==0.4.0
 Flask-PyMongo==0.4.1
+Flask-WTF==0.13.1
 gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
@@ -10,4 +12,6 @@ MarkupSafe==0.23
 pymongo==3.3.0
 pytz==2016.6.1
 requests==2.11.1
-Werkzeug==0.11.10
+visitor==0.1.3
+Werkzeug==0.11.11
+WTForms==2.1
